# PromptFlow-Tauri

./: CLAUDE.md  README.md  index.html  package-lock.json  package.json
scripts/: build.sh  clearmods.swift  clickwin.swift  dblclickwin.swift  dev.sh  dragwin.swift  hover.swift  qa.mjs  scroll.swift  shot.sh  verify.sh  winid.swift  winids.swift
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: archive.rs  commands.rs  lib.rs  macos_defaults.rs  main.rs  model.rs  persist.rs  seed.rs  store.rs
src/components/: FocusPane.tsx  Glyphs.tsx  NodeRow.tsx  OutlineView.tsx  RowEditor.tsx  SettingsPanel.tsx  TopBar.tsx
src/lib/: api.ts  bold.test.ts  bold.ts  caret.ts  flatten.ts  keys.test.ts  keys.ts  kindMorph.test.ts  kindMorph.ts  layout.ts  rowBands.test.ts  rowBands.ts  runs.test.ts  runs.ts  types.ts  wrap.test.ts  wrap.ts
src/state/: collapseAnim.ts  controller.ts  drag.test.ts  drag.ts  dragGesture.ts  focusPane.ts  mirror.ts  perfMeter.ts  rowAnim.ts  selection.test.ts  selection.ts  selectionDrag.ts  settings.ts  windowState.ts
