[package]
name = "promptflow-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "promptflow_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
uuid = { version = "1.24.0", features = ["v4", "serde"] }
tauri-plugin-dialog = "2.7.1"
chrono = { version = "0.4.45", features = ["serde"] }

# macOS only: register WebKit's text-substitution defaults before any webview
# exists (see src/macos_defaults.rs). Both crates are already in the tree via
# tauri at these versions, so this pulls in nothing new.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
  "NSUserDefaults",
  "NSString",
  "NSDictionary",
  "NSValue",
] }

